--- a/level3_design/Makefile
+++ b/level3_design/Makefile
@@ -4,10 +4,10 @@ TOPLEVEL_LANG ?= verilog
 
 PWD=$(shell pwd)
 
-VERILOG_SOURCES = $(PWD)/               # provide your design path
+VERILOG_SOURCES = $(PWD)/nlprg8.v             # provide your design path
 
-TOPLEVEL :=           # design file
-MODULE   :=     # test file
+TOPLEVEL :=      nlprg8     # design file
+MODULE   :=    test_nlprg8 # test file
 
 include $(shell cocotb-config --makefiles)/Makefile.sim
 
